Designs created for home page0

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mini Projects</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -14,11 +15,66 @@
     </header>
 
     <main>
-        <a href="">
-            <div>
-                <p>project 1</p>
-            </div>
-        </a>
+        <div>
+            <p>project 1</p>
+            <a href="">Github</a>
+            <a href="">Live</a>
+        </div>
+        <div>
+            <p>project 1</p>
+            <a href="">Github</a>
+            <a href="">Live</a>
+        </div>
+        <div>
+            <p>project 1</p>
+            <a href="">Github</a>
+            <a href="">Live</a>
+        </div>
+        <div>
+            <p>project 1</p>
+            <a href="">Github</a>
+            <a href="">Live</a>
+        </div>
+        <div>
+            <p>project 1</p>
+            <a href="">Github</a>
+            <a href="">Live</a>
+        </div>
+        <div>
+            <p>project 1</p>
+            <a href="">Github</a>
+            <a href="">Live</a>
+        </div>
+        <div>
+            <p>project 1</p>
+            <a href="">Github</a>
+            <a href="">Live</a>
+        </div>
+        <div>
+            <p>project 1</p>
+            <a href="">Github</a>
+            <a href="">Live</a>
+        </div>
+        <div>
+            <p>project 1</p>
+            <a href="">Github</a>
+            <a href="">Live</a>
+        </div>
+        <div>
+            <p>project 1</p>
+            <a href="">Github</a>
+            <a href="">Live</a>
+        </div>
+        <div>
+            <p>project 1</p>
+            <a href="">Github</a>
+            <a href="">Live</a>
+        </div>
+        <div>
+            <p>project 1</p>
+            <a href="">Github</a>
+            <a href="">Live</a>
+        </div>
     </main>
 
 </body>
