--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mini Projects</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -16,64 +23,100 @@
 
     <main>
         <div>
-            <p>project 1</p>
-            <a href="">Github</a>
-            <a href="">Live</a>
+            <p>Cart Bug Corrector</p>
+            <div class="link-container">
+                <a href="" class="github-link"><i class="fa-brands fa-github"></i></a>
+                <a href="./10. Correct a bug/index.html" class="live-link"><i class="fa-solid fa-circle fa-beat-fade"
+                        style="color: #ff0000;"></i>Live</a>
+            </div>
         </div>
         <div>
             <p>project 1</p>
-            <a href="">Github</a>
-            <a href="">Live</a>
+            <div class="link-container">
+                <a href="" class="github-link"><i class="fa-brands fa-github"></i></a>
+                <a href="" class="live-link"><i class="fa-solid fa-circle fa-beat-fade"
+                        style="color: #ff0000;"></i>Live</a>
+            </div>
         </div>
         <div>
             <p>project 1</p>
-            <a href="">Github</a>
-            <a href="">Live</a>
+            <div class="link-container">
+                <a href="" class="github-link"><i class="fa-brands fa-github"></i></a>
+                <a href="" class="live-link"><i class="fa-solid fa-circle fa-beat-fade"
+                        style="color: #ff0000;"></i>Live</a>
+            </div>
         </div>
         <div>
             <p>project 1</p>
-            <a href="">Github</a>
-            <a href="">Live</a>
+            <div class="link-container">
+                <a href="" class="github-link"><i class="fa-brands fa-github"></i></a>
+                <a href="" class="live-link"><i class="fa-solid fa-circle fa-beat-fade"
+                        style="color: #ff0000;"></i>Live</a>
+            </div>
         </div>
         <div>
             <p>project 1</p>
-            <a href="">Github</a>
-            <a href="">Live</a>
+            <div class="link-container">
+                <a href="" class="github-link"><i class="fa-brands fa-github"></i></a>
+                <a href="" class="live-link"><i class="fa-solid fa-circle fa-beat-fade"
+                        style="color: #ff0000;"></i>Live</a>
+            </div>
         </div>
         <div>
             <p>project 1</p>
-            <a href="">Github</a>
-            <a href="">Live</a>
+            <div class="link-container">
+                <a href="" class="github-link"><i class="fa-brands fa-github"></i></a>
+                <a href="" class="live-link"><i class="fa-solid fa-circle fa-beat-fade"
+                        style="color: #ff0000;"></i>Live</a>
+            </div>
         </div>
         <div>
             <p>project 1</p>
-            <a href="">Github</a>
-            <a href="">Live</a>
+            <div class="link-container">
+                <a href="" class="github-link"><i class="fa-brands fa-github"></i></a>
+                <a href="" class="live-link"><i class="fa-solid fa-circle fa-beat-fade"
+                        style="color: #ff0000;"></i>Live</a>
+            </div>
         </div>
         <div>
             <p>project 1</p>
-            <a href="">Github</a>
-            <a href="">Live</a>
+            <div class="link-container">
+                <a href="" class="github-link"><i class="fa-brands fa-github"></i></a>
+                <a href="" class="live-link"><i class="fa-solid fa-circle fa-beat-fade"
+                        style="color: #ff0000;"></i>Live</a>
+            </div>
         </div>
         <div>
             <p>project 1</p>
-            <a href="">Github</a>
-            <a href="">Live</a>
+            <div class="link-container">
+                <a href="" class="github-link"><i class="fa-brands fa-github"></i></a>
+                <a href="" class="live-link"><i class="fa-solid fa-circle fa-beat-fade"
+                        style="color: #ff0000;"></i>Live</a>
+            </div>
         </div>
         <div>
             <p>project 1</p>
-            <a href="">Github</a>
-            <a href="">Live</a>
+            <div class="link-container">
+                <a href="" class="github-link"><i class="fa-brands fa-github"></i></a>
+                <a href="" class="live-link"><i class="fa-solid fa-circle fa-beat-fade"
+                        style="color: #ff0000;"></i>Live</a>
+            </div>
         </div>
         <div>
             <p>project 1</p>
-            <a href="">Github</a>
-            <a href="">Live</a>
+            <div class="link-container">
+                <a href="" class="github-link"><i class="fa-brands fa-github"></i></a>
+                <a href="" class="live-link"><i class="fa-solid fa-circle fa-beat-fade"
+                        style="color: #ff0000;"></i>Live</a>
+            </div>
         </div>
         <div>
             <p>project 1</p>
-            <a href="">Github</a>
-            <a href="">Live</a>
+            <div class="link-container">
+                <a href="" class="github-link"><i class="fa-brands fa-github"></i></a>
+                <a href="" class="live-link"><i class="fa-solid fa-circle fa-beat-fade"
+                        style="color: #ff0000;"></i>Live</a>
+            </div>
         </div>
     </main>
 
