Live Link Added in few

--- a/index.html
+++ b/index.html
@@ -25,73 +25,73 @@
         <div>
             <p>Cart Bug Corrector</p>
             <div class="link-container">
-                <a href="" class="github-link"><i class="fa-brands fa-github"></i></a>
-                <a href="./10. Correct a bug/index.html" class="live-link"><i class="fa-solid fa-circle fa-beat-fade"
-                        style="color: #ff0000;"></i>Live</a>
+                <a target="_blank" href="" class="github-link"><i class="fa-brands fa-github"></i></a>
+                <a target="_blank" href="./10. Correct a bug/index.html" class="live-link"><i
+                        class="fa-solid fa-circle fa-beat-fade" style="color: #ff0000;"></i>Live</a>
             </div>
         </div>
         <div>
-            <p>project 1</p>
+            <p>VOWEL'S COUNTER</p>
             <div class="link-container">
-                <a href="" class="github-link"><i class="fa-brands fa-github"></i></a>
-                <a href="" class="live-link"><i class="fa-solid fa-circle fa-beat-fade"
-                        style="color: #ff0000;"></i>Live</a>
+                <a target="_blank" href="" class="github-link"><i class="fa-brands fa-github"></i></a>
+                <a target="_blank" href="./6. Vowels counter/index.html" class="live-link"><i
+                        class="fa-solid fa-circle fa-beat-fade" style="color: #ff0000;"></i>Live</a>
             </div>
         </div>
         <div>
-            <p>project 1</p>
+            <p>Bill Splitter</p>
             <div class="link-container">
                 <a href="" class="github-link"><i class="fa-brands fa-github"></i></a>
-                <a href="" class="live-link"><i class="fa-solid fa-circle fa-beat-fade"
-                        style="color: #ff0000;"></i>Live</a>
+                <a target="_blank" href="./13. Bill Splitter/index.html" class="live-link"><i
+                        class="fa-solid fa-circle fa-beat-fade" style="color: #ff0000;"></i>Live</a>
             </div>
         </div>
         <div>
-            <p>project 1</p>
+            <p>Color Change on Click</p>
             <div class="link-container">
                 <a href="" class="github-link"><i class="fa-brands fa-github"></i></a>
-                <a href="" class="live-link"><i class="fa-solid fa-circle fa-beat-fade"
-                        style="color: #ff0000;"></i>Live</a>
+                <a target="_blank" href="./23.Change the color on click/index.html" class="live-link"><i
+                        class="fa-solid fa-circle fa-beat-fade" style="color: #ff0000;"></i>Live</a>
             </div>
         </div>
         <div>
-            <p>project 1</p>
+            <p>Password Validation</p>
             <div class="link-container">
                 <a href="" class="github-link"><i class="fa-brands fa-github"></i></a>
-                <a href="" class="live-link"><i class="fa-solid fa-circle fa-beat-fade"
-                        style="color: #ff0000;"></i>Live</a>
+                <a target="_blank" href="./19. Validate Password/index.html" class="live-link"><i
+                        class="fa-solid fa-circle fa-beat-fade" style="color: #ff0000;"></i>Live</a>
             </div>
         </div>
         <div>
-            <p>project 1</p>
+            <p>Unit Converter</p>
             <div class="link-container">
                 <a href="" class="github-link"><i class="fa-brands fa-github"></i></a>
-                <a href="" class="live-link"><i class="fa-solid fa-circle fa-beat-fade"
-                        style="color: #ff0000;"></i>Live</a>
+                <a target="_blank" href="./11. Unit Converter/index.html" class="live-link"><i
+                        class="fa-solid fa-circle fa-beat-fade" style="color: #ff0000;"></i>Live</a>
             </div>
         </div>
         <div>
-            <p>project 1</p>
+            <p>To-Do App</p>
             <div class="link-container">
                 <a href="" class="github-link"><i class="fa-brands fa-github"></i></a>
-                <a href="" class="live-link"><i class="fa-solid fa-circle fa-beat-fade"
-                        style="color: #ff0000;"></i>Live</a>
+                <a target="_blank" href="./21. TODO App/index.html" class="live-link"><i
+                        class="fa-solid fa-circle fa-beat-fade" style="color: #ff0000;"></i>Live</a>
             </div>
         </div>
         <div>
-            <p>project 1</p>
+            <p>Calculate Rental Cost</p>
             <div class="link-container">
                 <a href="" class="github-link"><i class="fa-brands fa-github"></i></a>
-                <a href="" class="live-link"><i class="fa-solid fa-circle fa-beat-fade"
-                        style="color: #ff0000;"></i>Live</a>
+                <a target="_blank" href="./12. Calculate Rental Cost/index.html" class="live-link"><i
+                        class="fa-solid fa-circle fa-beat-fade" style="color: #ff0000;"></i>Live</a>
             </div>
         </div>
         <div>
-            <p>project 1</p>
+            <p>Progress Bar</p>
             <div class="link-container">
                 <a href="" class="github-link"><i class="fa-brands fa-github"></i></a>
-                <a href="" class="live-link"><i class="fa-solid fa-circle fa-beat-fade"
-                        style="color: #ff0000;"></i>Live</a>
+                <a target="_blank" href="./22. Progress Bar/index.html" class="live-link"><i
+                        class="fa-solid fa-circle fa-beat-fade" style="color: #ff0000;"></i>Live</a>
             </div>
         </div>
         <div>
