Projects link added to live link

--- a/index.html
+++ b/index.html
@@ -95,27 +95,27 @@
             </div>
         </div>
         <div>
-            <p>project 1</p>
+            <p>Password Validation</p>
             <div class="link-container">
                 <a href="" class="github-link"><i class="fa-brands fa-github"></i></a>
-                <a href="" class="live-link"><i class="fa-solid fa-circle fa-beat-fade"
-                        style="color: #ff0000;"></i>Live</a>
+                <a target="_blank" href="./1. Password Validator/index.html" class="live-link"><i
+                        class="fa-solid fa-circle fa-beat-fade" style="color: #ff0000;"></i>Live</a>
             </div>
         </div>
         <div>
-            <p>project 1</p>
+            <p>Move the image</p>
             <div class="link-container">
                 <a href="" class="github-link"><i class="fa-brands fa-github"></i></a>
-                <a href="" class="live-link"><i class="fa-solid fa-circle fa-beat-fade"
-                        style="color: #ff0000;"></i>Live</a>
+                <a target="_blank" href="./25. Move the Image/index.html" class="live-link"><i
+                        class="fa-solid fa-circle fa-beat-fade" style="color: #ff0000;"></i>Live</a>
             </div>
         </div>
         <div>
-            <p>project 1</p>
+            <p>Remove duplicates from Cart</p>
             <div class="link-container">
                 <a href="" class="github-link"><i class="fa-brands fa-github"></i></a>
-                <a href="" class="live-link"><i class="fa-solid fa-circle fa-beat-fade"
-                        style="color: #ff0000;"></i>Live</a>
+                <a target="_blank" href="./7. Remove duplicates/index.html" class="live-link"><i
+                        class="fa-solid fa-circle fa-beat-fade" style="color: #ff0000;"></i>Live</a>
             </div>
         </div>
     </main>
