Projects Github repo link added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <div>
             <p>Cart Bug Corrector</p>
             <div class="link-container">
-                <a target="_blank" href="" class="github-link"><i class="fa-brands fa-github"></i></a>
+                <a target="_blank"
+                    href="https://github.com/webakash1806/PW-javascript-milestone-1-assignment/tree/master/10.%20Correct%20a%20bug"
+                    class="github-link"><i class="fa-brands fa-github"></i></a>
                 <a target="_blank" href="./10. Correct a bug/index.html" class="live-link"><i
                         class="fa-solid fa-circle fa-beat-fade" style="color: #ff0000;"></i>Live</a>
             </div>
@@ -33,7 +35,9 @@
         <div>
             <p>VOWEL'S COUNTER</p>
             <div class="link-container">
-                <a target="_blank" href="" class="github-link"><i class="fa-brands fa-github"></i></a>
+                <a target="_blank"
+                    href="https://github.com/webakash1806/PW-javascript-milestone-1-assignment/tree/master/6.%20Vowels%20counter"
+                    class="github-link"><i class="fa-brands fa-github"></i></a>
                 <a target="_blank" href="./6. Vowels counter/index.html" class="live-link"><i
                         class="fa-solid fa-circle fa-beat-fade" style="color: #ff0000;"></i>Live</a>
             </div>
@@ -49,7 +53,8 @@
         <div>
             <p>Color Change on Click</p>
             <div class="link-container">
-                <a href="" class="github-link"><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/webakash1806/PW-javascript-milestone-1-assignment/tree/master/23.Change%20the%20color%20on%20click"
+                    class="github-link"><i class="fa-brands fa-github"></i></a>
                 <a target="_blank" href="./23.Change the color on click/index.html" class="live-link"><i
                         class="fa-solid fa-circle fa-beat-fade" style="color: #ff0000;"></i>Live</a>
             </div>
